# base-defi-pulse

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/defi_pulse/: analytics.py  api.py  connectors.py
backend/tests/: test_api.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
